Group 51/Code/src/antlr/ReactParser.java
// Generated from F:/files/IT/compilerSlides/Project2/src/antlr/ReactParser.g4 by ANTLR 4.13.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.io.IOException;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		APP=1, JSX=2, DIV=3, P=4, IMG=5, SRC=6, COMPONENT=7, USESTATE=8, USEREF=9, 
		USEEFFECT=10, SETTIMEOUT=11, SETINTERVAL=12, ONCLICK=13, IF=14, ELSE=15, 
		FOR=16, IN=17, TRUE=18, FALSE=19, DASH=20, LPAREN=21, RPAREN=22, LBRACE=23, 
		RBRACE=24, LBRACK=25, RBRACK=26, COMMA=27, COLON=28, SEMI=29, EQUALS=30, 
		DOT=31, QUESTION=32, PLUS=33, MULTIPLY=34, DIVIDE=35, MODULO=36, CLASS=37, 
		POSITION=38, TOP=39, RIGHT=40, LEFT=41, BOTTOM=42, FLEX=43, FLEX_COLUMN=44, 
		FLEX_ROW=45, JUSTIFY_CENTER=46, JUSTIFY_START=47, JUSTIFY_END=48, JUSTIFY_AROUND=49, 
		JUSTIFY_EVENLY=50, JUSTIFY_BETWEEN=51, GAP=52, BORDER=53, BORDER_BOTTOM=54, 
		BORDER_RADIUS_SM=55, BORDER_RADIUS_MD=56, BORDER_RADIUS_LG=57, BORDER_RADIUS_XL=58, 
		BORDER_RADIUS_2XL=59, BORDER_RADIUS_3XL=60, BORDER_RADIUS_FULL=61, CURSOR_POINTER=62, 
		MARGIN=63, MARGIN_AUTO=64, TEXT=65, TEXT_SM=66, TEXT_LG=67, TEXT_XL=68, 
		TEXT_2XL=69, TEXT_3XL=70, FONT_BOLD=71, FONT_MEDIUM=72, WIDTH=73, HEIGHT=74, 
		IDENTIFIER=75, STRING=76, NUMBER=77, WS=78;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_component = 2, RULE_callComponent = 3, 
		RULE_assignment = 4, RULE_componentAttribute = 5, RULE_functionAttribute = 6, 
		RULE_ifStatement = 7, RULE_forStatement = 8, RULE_functionCall = 9, RULE_function = 10, 
		RULE_timeFunction = 11, RULE_array = 12, RULE_object = 13, RULE_htmlTag = 14, 
		RULE_div = 15, RULE_p = 16, RULE_img = 17, RULE_props = 18, RULE_events = 19, 
		RULE_onClick = 20, RULE_src = 21, RULE_className = 22, RULE_cssProps = 23, 
		RULE_gabDash = 24, RULE_borderDash = 25, RULE_borderBottomDash = 26, RULE_marginDash = 27, 
		RULE_pDash = 28, RULE_textDash = 29, RULE_widthDash = 30, RULE_heightDash = 31, 
		RULE_top = 32, RULE_bottom = 33, RULE_right = 34, RULE_left = 35, RULE_hooks = 36, 
		RULE_useStateHook = 37, RULE_useRefHook = 38, RULE_useEffectHook = 39, 
		RULE_hookContent = 40, RULE_jsx = 41, RULE_expression = 42, RULE_literal = 43, 
		RULE_boolean = 44, RULE_arithmaticOperator = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "component", "callComponent", "assignment", "componentAttribute", 
			"functionAttribute", "ifStatement", "forStatement", "functionCall", "function", 
			"timeFunction", "array", "object", "htmlTag", "div", "p", "img", "props", 
			"events", "onClick", "src", "className", "cssProps", "gabDash", "borderDash", 
			"borderBottomDash", "marginDash", "pDash", "textDash", "widthDash", "heightDash", 
			"top", "bottom", "right", "left", "hooks", "useStateHook", "useRefHook", 
			"useEffectHook", "hookContent", "jsx", "expression", "literal", "boolean", 
			"arithmaticOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'App'", "'JSX'", "'div'", "'p'", "'img'", "'src'", "'Component'", 
			"'useState'", "'useRef'", "'useEffect'", "'setTimeout'", "'setInterval'", 
			"'onClick'", "'if'", "'else'", "'for'", "'in'", "'true'", "'false'", 
			"'-'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", "';'", 
			"'='", "'.'", "'?'", "'+'", "'*'", "'/'", "'%'", "'class'", "'relative'", 
			"'top'", "'right'", "'left'", "'bottom'", "'flex'", "'flex-col'", "'flex-row'", 
			"'justify-center'", "'justify-start'", "'justify-end'", "'justify-around'", 
			"'justify-evenly'", "'justify-between'", "'gap'", "'border'", "'border-b'", 
			"'rounded-sm'", "'rounded-md'", "'rounded-lg'", "'rounded-xl'", "'rounded-2xl'", 
			"'rounded-3xl'", "'rounded-full'", "'cursor-pointer'", "'m'", "'m-auto'", 
			"'text'", "'text-sm'", "'text-lg'", "'text-xl'", "'text-2xl'", "'text-3xl'", 
			"'font-bold'", "'font-medium'", "'w'", "'h'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "APP", "JSX", "DIV", "P", "IMG", "SRC", "COMPONENT", "USESTATE", 
			"USEREF", "USEEFFECT", "SETTIMEOUT", "SETINTERVAL", "ONCLICK", "IF", 
			"ELSE", "FOR", "IN", "TRUE", "FALSE", "DASH", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACK", "RBRACK", "COMMA", "COLON", "SEMI", "EQUALS", "DOT", 
			"QUESTION", "PLUS", "MULTIPLY", "DIVIDE", "MODULO", "CLASS", "POSITION", 
			"TOP", "RIGHT", "LEFT", "BOTTOM", "FLEX", "FLEX_COLUMN", "FLEX_ROW", 
			"JUSTIFY_CENTER", "JUSTIFY_START", "JUSTIFY_END", "JUSTIFY_AROUND", "JUSTIFY_EVENLY", 
			"JUSTIFY_BETWEEN", "GAP", "BORDER", "BORDER_BOTTOM", "BORDER_RADIUS_SM", 
			"BORDER_RADIUS_MD", "BORDER_RADIUS_LG", "BORDER_RADIUS_XL", "BORDER_RADIUS_2XL", 
			"BORDER_RADIUS_3XL", "BORDER_RADIUS_FULL", "CURSOR_POINTER", "MARGIN", 
			"MARGIN_AUTO", "TEXT", "TEXT_SM", "TEXT_LG", "TEXT_XL", "TEXT_2XL", "TEXT_3XL", 
			"FONT_BOLD", "FONT_MEDIUM", "WIDTH", "HEIGHT", "IDENTIFIER", "STRING", 
			"NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ReactParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) {
				try {
					return ((ReactParserVisitor<? extends T>)visitor).visitProgram(this);
				} catch (IOException e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				statement();
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 42033080L) != 0) || _la==IDENTIFIER );
			setState(97);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public CallComponentContext callComponent() {
			return getRuleContext(CallComponentContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TimeFunctionContext timeFunction() {
			return getRuleContext(TimeFunctionContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public HtmlTagContext htmlTag() {
			return getRuleContext(HtmlTagContext.class,0);
		}
		public HooksContext hooks() {
			return getRuleContext(HooksContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) {
				try {
					return ((ReactParserVisitor<? extends T>)visitor).visitStatement(this);
				} catch (IOException e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				component();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				callComponent();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				assignment();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				ifStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				forStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				functionCall();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(105);
				function();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(106);
				timeFunction();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(107);
				array();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(108);
				object();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(109);
				htmlTag();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(110);
				hooks();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(ReactParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(ReactParser.LPAREN, 0); }
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public TerminalNode RPAREN() { return getToken(ReactParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(ReactParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(ReactParser.LBRACE, i);
		}
		public JsxContext jsx() {
			return getRuleContext(JsxContext.class,0);
		}
		public List<TerminalNode> RBRACE() { return getTokens(ReactParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(ReactParser.RBRACE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ReactParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ReactParser.COMMA, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ReactParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ReactParser.IDENTIFIER, i);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) {
				try {
					return ((ReactParserVisitor<? extends T>)visitor).visitComponent(this);
				} catch (IOException e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_component);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(COMPONENT);
			setState(114);
			match(LPAREN);
			setState(115);
			match(STRING);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(116);
				match(COMMA);
				{
				{
				setState(117);
				match(LBRACE);
				{
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						{
						setState(118);
						match(IDENTIFIER);
						}
						setState(119);
						match(COMMA);
						}
						} 
					}
					setState(124);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				{
				setState(125);
				match(IDENTIFIER);
				}
				}
				setState(127);
				match(RBRACE);
				}
				}
				}
			}

			setState(130);
			match(RPAREN);
			setState(131);
			match(LBRACE);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 42033080L) != 0) || _la==IDENTIFIER) {
				{
				{
				setState(132);
				statement();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			jsx();
			setState(139);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallComponentContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(ReactParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(ReactParser.LPAREN, 0); }
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public TerminalNode RPAREN() { return getToken(ReactParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ReactParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ReactParser.COMMA, i);
		}
		public TerminalNode LBRACE() { return getToken(ReactParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ReactParser.RBRACE, 0); }
		public List<ComponentAttributeContext> componentAttribute() {
			return getRuleContexts(ComponentAttributeContext.class);
		}
		public ComponentAttributeContext componentAttribute(int i) {
			return getRuleContext(ComponentAttributeContext.class,i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ReactParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ReactParser.IDENTIFIER, i);
		}
		public CallComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callComponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterCallComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitCallComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) {
				try {
					return ((ReactParserVisitor<? extends T>)visitor).visitCallComponent(this);
				} catch (IOException e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final CallComponentContext callComponent() throws RecognitionException {
		CallComponentContext _localctx = new CallComponentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_callComponent);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(COMPONENT);
			setState(142);
			match(LPAREN);
			setState(143);
			match(STRING);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(144);
				match(COMMA);
				setState(167);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LBRACE:
					{
					{
					setState(145);
					match(LBRACE);
					{
					setState(153);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(148);
							_errHandler.sync(this);
							switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
							case 1:
								{
								setState(146);
								match(IDENTIFIER);
								}
								break;
							case 2:
								{
								setState(147);
								componentAttribute();
								}
								break;
							}
							setState(150);
							match(COMMA);
							}
							} 
						}
						setState(155);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					}
					setState(158);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						setState(156);
						match(IDENTIFIER);
						}
						break;
					case 2:
						{
						setState(157);
						componentAttribute();
						}
						break;
					}
					}
					setState(160);
					match(RBRACE);
					}
					}
					break;
				case RPAREN:
				case IDENTIFIER:
					{
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==IDENTIFIER) {
						{
						{
						setState(161);
						componentAttribute();
						}
						}
						setState(166);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			setState(171);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(ReactParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) {
				try {
					return ((ReactParserVisitor<? extends T>)visitor).visitAssignment(this);
				} catch (IOException e) {
					throw new RuntimeException(e);
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(IDENTIFIER);
			setState(174);
			match(EQUALS);
			setState(175);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentAttributeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(ReactParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ComponentAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterComponentAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitComponentAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitComponentAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentAttributeContext componentAttribute() throws RecognitionException {
		ComponentAttributeContext _localctx = new ComponentAttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(IDENTIFIER);
			setState(178);
			match(EQUALS);
			setState(179);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionAttributeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(ReactParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterFunctionAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitFunctionAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitFunctionAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionAttributeContext functionAttribute() throws RecognitionException {
		FunctionAttributeContext _localctx = new FunctionAttributeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(IDENTIFIER);
			setState(182);
			match(EQUALS);
			setState(183);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
